...
        android:title="Rooms" />
    <item
        android:id="@+id/matchFragment"
        android:title="Match"
        android:icon="@drawable/icon_cart"/>
    <item
        android:id="@+id/profileFragment"
        android:title="Profile"
        android:icon="@drawable/icon_profile"/>


</menu>
